--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
                     <div class="nav-item dropdown hoverdrop">
                         <span href="#" class="nav-link" data-toggle="dropdown">Serviços</span>
                         <div class="dropdown-menu rounded-0 m-0">
-                            <a href="servicos#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="servicos#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a><!-- <a href="servicos#qm" class="dropdown-item">Quick Massage</a> -->
+                            <a href="servicos#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="servicos#dt" class="dropdown-item">Liberação Miofascial (Deep Tissue)</a><!-- <a href="servicos#qm" class="dropdown-item">Quick Massage</a> -->
                             <a href="servicos#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
                             <a href="servicos#relax" class="dropdown-item">Massagem Relaxante</a> <a href="servicos#cabeca" class="dropdown-item">Massagem para Dor de cabeça (Cefaleia - Enxaqueca)</a> <a href="servicos#dtm" class="dropdown-item">Massagem para Disfunção Temporomandibular</a>
                             <a href="servicos#fl" class="dropdown-item">Massagem Facial (Lifting Facial)</a><a href="servicos#dl" class="dropdown-item">Drenagem Linfática</a>
-                            <a href="servicos#pq" class="dropdown-item">Pedras quentes</a>
+                            <a href="servicos#pq" class="dropdown-item">Pedras Quentes</a>
                             <a href="servicos#vent" class="dropdown-item">Ventosaterapia</a>
-                            <a href="servicos#ROLF" class="dropdown-item">Liberação miofascial (Conceito ROLF)</a><a href="servicos#auric" class="dropdown-item">Auriculoterapia</a>
+                            <a href="servicos#ROLF" class="dropdown-item">Liberação Miofascial (Conceito ROLF)</a><a href="servicos#auric" class="dropdown-item">Auriculoterapia</a>
                         </div>
                     </div>
                     <a href="preco" class="nav-item nav-link">Preços</a>
@@ -222,7 +222,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
-                            <h3 class="display-3 text-white mb-3" style="line-height: 0.9;">Liberação miofascial <br><span>(Deep Tissue)</span></h3>
+                            <h3 class="display-3 text-white mb-3" style="line-height: 0.9;">Liberação Miofascial <br><span>(Deep Tissue)</span></h3>
                             <p class="mx-md-5 px-5">Reduza dores, libere tensões musculares profundas, aderências fasciais, melhore a função muscular e promova uma recuperação eficaz. </p>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20Miofascial%20(Deep%20Tissue)." target="_blank">Agendar</a>
                                                         <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#dt" >Saiba mais</a>
@@ -261,7 +261,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
-                            <h3 class="display-3 text-capitalize text-white mb-3">Pedras quentes</h3>
+                            <h3 class="display-3 text-capitalize text-white mb-3">Pedras Quentes</h3>
                             <p class="mx-md-5 px-5">Pedras aquecidas para massagear suavemente os músculos, proporcionando alívio de tensões e melhorando a circulação. Deixe-se envolver pelo calor terapêutico das pedras e sinta uma profunda sensação de calma e bem-estar. </p>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20com%20Pedras%20Quentes." target="_blank">Agendar</a>
                                                         <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#pq" >Saiba mais</a>
@@ -287,7 +287,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
-                            <h3 class="display-3 text-white mb-3" style="line-height: 0.9;">Liberação miofascial <br><span>(Conceito ROLF)</span></h3>
+                            <h3 class="display-3 text-white mb-3" style="line-height: 0.9;">Liberação Miofascial <br><span>(Conceito ROLF)</span></h3>
                             <p class="mx-md-5 px-5">Com base na filosofia de Ida Rolf, esta abordagem terapêutica única busca reorganizar e realinhar o corpo intervindo na fáscia, para promover um equilíbrio postural melhorado, aliviar dores crônicas e aumentar a flexibilidade. Experimente o Rolfing e sinta a harmonia física e bem-estar. </p>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20Miofascial%20(Conceito%20ROLF)." target="_blank">Agendar</a>
                                                         <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#ROLF" >Saiba mais</a>
@@ -397,8 +397,8 @@
             <div class="service-item position-relative">
                 <img class="img-fluid" src="img/pedras.jpg" alt="">
                 <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Pedras quentes</h4>
-                    <p class="text-white px-3 mb-3">Calor aconchegante e reconfortante, promovendo relaxamento profundo, melhora da circulação e tensões, a experiência terapêutica das pedras quentes é verdadeiramente revigorante.</p>
+                    <h4 class="text-white font-weight-medium px-3">Pedras Quentes</h4>
+                    <p class="text-white px-3 mb-3">Calor aconchegante e reconfortante, promovendo relaxamento profundo, melhora da circulação e tensões, a experiência terapêutica das Pedras Quentes é verdadeiramente revigorante.</p>
                     <div class="w-100 bg-white text-center p-4" >
                         <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                     </div>
@@ -408,7 +408,7 @@
                 <img class="img-fluid" src="img/r1.jpg" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Recursos instrumentais</h4>
-                    <p class="text-white px-3 mb-3">Pantalas, bambu, instrumento de liberação miofascial e mais para proporcionar uma terapia de acordo com a sua necessidade.</p>
+                    <p class="text-white px-3 mb-3">Pantalas, bambu, instrumento de Liberação Miofascial e mais para proporcionar uma terapia de acordo com a sua necessidade.</p>
                     <div class="w-100 bg-white text-center p-4" >
                         <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                     </div>
@@ -461,8 +461,8 @@
             <div class="service-item position-relative">
                 <img class="img-fluid" src="img/pedrashan.jpg" alt="">
                 <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Pedras quentes</h4>
-                    <p class="text-white px-3 mb-3">Calor aconchegante e reconfortante, promovendo relaxamento profundo, melhora da circulação e tensões, a experiência terapêutica das pedras quentes é verdadeiramente revigorante.</p>
+                    <h4 class="text-white font-weight-medium px-3">Pedras Quentes</h4>
+                    <p class="text-white px-3 mb-3">Calor aconchegante e reconfortante, promovendo relaxamento profundo, melhora da circulação e tensões, a experiência terapêutica das Pedras Quentes é verdadeiramente revigorante.</p>
                     <div class="w-100 bg-white text-center p-4" >
                         <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                     </div>
@@ -472,7 +472,7 @@
                 <img class="img-fluid" src="img/recursoshan.jpg" alt="">
                 <div class="service-text text-center">
                     <h4 class="text-white font-weight-medium px-3">Recursos instrumentais</h4>
-                    <p class="text-white px-3 mb-3">Pantalas, bambu, instrumento de liberação miofascial e mais para proporcionar uma terapia de acordo com a sua necessidade.</p>
+                    <p class="text-white px-3 mb-3">Pantalas, bambu, instrumento de Liberação Miofascial e mais para proporcionar uma terapia de acordo com a sua necessidade.</p>
                     <div class="w-100 bg-white text-center p-4" >
                         <a class="btn btn-primary" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                     </div>
@@ -639,7 +639,7 @@
                                     </h1>
                                 </div>
                                 <div class="p-4">
-                                    <p><i class="fa fa-check text-success mr-2"></i>Liberação miofascial</p>
+                                    <p><i class="fa fa-check text-success mr-2"></i>Liberação Miofascial</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Conceito Rolf</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Deep tissue(tecido profundo)</p>
                                     <a href="" class="btn btn-primary my-2">Agendar</a>
@@ -655,7 +655,7 @@
                                 <div class="p-4">
                                     <p><i class="fa fa-check text-success mr-2"></i>Massage Sueca (Clássica)</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Massagem Relaxante</p>
-                                    <p><i class="fa fa-check text-success mr-2"></i>Drenagem linfática</p>
+                                    <p><i class="fa fa-check text-success mr-2"></i>Drenagem Linfática</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Ventosaterapia</p>
                                     <a href="" class="btn btn-primary my-2">Agendar</a>
                                 </div>
@@ -896,13 +896,13 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Nossos serviços</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="servicos#tu"><i class="fa fa-angle-right mr-2"></i>Massagem para dor (Clínica)</a><a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial <br>(Deep Tissue)</a><!-- <a class="text-white-50 mb-2" href="servicos#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a> -->
+                                <a class="text-white-50 mb-2" href="servicos#tu"><i class="fa fa-angle-right mr-2"></i>Massagem para dor (Clínica)</a><a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação Miofascial <br>(Deep Tissue)</a><!-- <a class="text-white-50 mb-2" href="servicos#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a> -->
                                 <a class="text-white-50 mb-2" href="servicos#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
                                 <a class="text-white-50 mb-2" href="servicos#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a> <a class="text-white-50 mb-2" href="servicos#cabeca"><i class="fa fa-angle-right mr-2"></i>Massagem para Dor de cabeça (Cefaleia - Enxaqueca)</a> <a class="text-white-50 mb-2" href="servicos#dtm"><i class="fa fa-angle-right mr-2"></i>Massagem para Disfunção Temporomandibular</a> <a class="text-white-50 mb-2" href="servicos#fl"><i class="fa fa-angle-right mr-2"></i>Massagem Facial (Lifting Facial)</a>
                                 <a class="text-white-50 mb-2" href="servicos#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
-                                <a class="text-white-50 mb-2" href="servicos#pq"><i class="fa fa-angle-right mr-2"></i>Pedras quentes</a>
+                                <a class="text-white-50 mb-2" href="servicos#pq"><i class="fa fa-angle-right mr-2"></i>Pedras Quentes</a>
                                 <a class="text-white-50 mb-2" href="servicos#vent"><i class="fa fa-angle-right mr-2"></i>Ventosaterapia</a>
-                                <a class="text-white-50 mb-2" href="servicos#ROLF"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Conceito ROLF)</a><a class="text-white-50 mb-2" href="servicos#auric"><i class="fa fa-angle-right mr-2"></i>Auriculoterapia</a>
+                                <a class="text-white-50 mb-2" href="servicos#ROLF"><i class="fa fa-angle-right mr-2"></i>Liberação Miofascial (Conceito ROLF)</a><a class="text-white-50 mb-2" href="servicos#auric"><i class="fa fa-angle-right mr-2"></i>Auriculoterapia</a>
                             </div>
                         </div>
                         <!--<div class="col-sm-12 mb-5">
