--- a/preco.html
+++ b/preco.html
@@ -139,13 +139,13 @@
                     <div class="nav-item dropdown hoverdrop">
                         <span href="#" class="nav-link " data-toggle="dropdown">Serviços</span>
                         <div class="dropdown-menu rounded-0 m-0">
-                            <a href="servicos#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="servicos#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a><!-- <a href="servicos#qm" class="dropdown-item">Quick Massage</a> -->
+                            <a href="servicos#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="servicos#dt" class="dropdown-item">Liberação Miofascial (Deep Tissue)</a><!-- <a href="servicos#qm" class="dropdown-item">Quick Massage</a> -->
                             <a href="servicos#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
                             <a href="servicos#relax" class="dropdown-item">Massagem Relaxante</a> <a href="servicos#cabeca" class="dropdown-item">Massagem para Dor de cabeça (Cefaleia - Enxaqueca)</a> <a href="servicos#dtm" class="dropdown-item">Massagem para Disfunção Temporomandibular</a>
                             <a href="servicos#fl" class="dropdown-item">Massagem Facial (Lifting Facial)</a><a href="servicos#dl" class="dropdown-item">Drenagem Linfática</a>
-                            <a href="servicos#pq" class="dropdown-item">Pedras quentes</a>
+                            <a href="servicos#pq" class="dropdown-item">Pedras Quentes</a>
                             <a href="servicos#vent" class="dropdown-item">Ventosaterapia</a>
-                            <a href="servicos#ROLF" class="dropdown-item">Liberação miofascial (Conceito ROLF)</a><a href="servicos#auric" class="dropdown-item">Auriculoterapia</a>
+                            <a href="servicos#ROLF" class="dropdown-item">Liberação Miofascial (Conceito ROLF)</a><a href="servicos#auric" class="dropdown-item">Auriculoterapia</a>
                         </div>
                     </div>
                     
@@ -197,7 +197,7 @@
                     <img class="img-fluid w-100" src="img/libe.jpg" alt="">
                 </div>
                 <div class="col-lg-5">
-                    <h4 class="mb-4">Liberação miofascial (Deep tissue)</h4>
+                    <h4 class="mb-4">Liberação Miofascial (Deep tissue)</h4>
                     <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$150,00<br>Domiciliar - Consulte valor via Agendamento<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20miofascial%20(Deep%20tissue)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
@@ -275,7 +275,7 @@
                     <img class="img-fluid w-100" src="img/dr.jpg" alt="">
                 </div>
                 <div class="col-lg-5">
-                    <h4 class="mb-4">Drenagem linfática</h4>
+                    <h4 class="mb-4">Drenagem Linfática</h4>
                     <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$130,00<br>Domiciliar - Consulte valor via Agendamento<br>Pacote 6 sessões: <strong>10% de desconto</strong><br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Drenagem%20linf%C3%A1tica." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
@@ -288,7 +288,7 @@
                     <img class="img-fluid w-100" src="img/pq.jpg" alt="">
                 </div>
                 <div class="col-lg-5">
-                    <h4 class="mb-4">Massagem com pedras quentes</h4>
+                    <h4 class="mb-4">Massagem com Pedras Quentes</h4>
                     <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$160,00<br>Domiciliar - Consulte valor via Agendamento<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20com%20Pedras%20Quentes." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
@@ -314,7 +314,7 @@
                     <img class="img-fluid w-100" src="img/rolff.jpg" alt="">
                 </div>
                 <div class="col-lg-5">
-                    <h4 class="mb-4">Liberação miofascial (Conceito ROLF)</h4>
+                    <h4 class="mb-4">Liberação Miofascial (Conceito ROLF)</h4>
                     <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 60-90 min<br><strong>Preço:</strong> R$250,00<br>Domiciliar - Consulte valor via Agendamento<br><strong>Atenção:</strong> O protocolo necessita de em média <strong>10 sessões</strong><br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20miofascial%20(Conceito%20ROLF)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
@@ -382,13 +382,13 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Nossos serviços</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="servicos#tu"><i class="fa fa-angle-right mr-2"></i>Massagem para dor (Clínica)</a><a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial <br>(Deep Tissue)</a><!-- <a class="text-white-50 mb-2" href="servicos#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a> -->
+                                <a class="text-white-50 mb-2" href="servicos#tu"><i class="fa fa-angle-right mr-2"></i>Massagem para dor (Clínica)</a><a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação Miofascial <br>(Deep Tissue)</a><!-- <a class="text-white-50 mb-2" href="servicos#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a> -->
                                 <a class="text-white-50 mb-2" href="servicos#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
                                 <a class="text-white-50 mb-2" href="servicos#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a> <a class="text-white-50 mb-2" href="servicos#cabeca"><i class="fa fa-angle-right mr-2"></i>Massagem para Dor de cabeça (Cefaleia - Enxaqueca)</a> <a class="text-white-50 mb-2" href="servicos#dtm"><i class="fa fa-angle-right mr-2"></i>Massagem para Disfunção Temporomandibular</a> <a class="text-white-50 mb-2" href="servicos#fl"><i class="fa fa-angle-right mr-2"></i>Massagem Facial (Lifting Facial)</a>
                                 <a class="text-white-50 mb-2" href="servicos#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
-                                <a class="text-white-50 mb-2" href="servicos#pq"><i class="fa fa-angle-right mr-2"></i>Pedras quentes</a>
+                                <a class="text-white-50 mb-2" href="servicos#pq"><i class="fa fa-angle-right mr-2"></i>Pedras Quentes</a>
                                 <a class="text-white-50 mb-2" href="servicos#vent"><i class="fa fa-angle-right mr-2"></i>Ventosaterapia</a>
-                                <a class="text-white-50 mb-2" href="servicos#ROLF"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Conceito ROLF)</a><a class="text-white-50 mb-2" href="servicos#auric"><i class="fa fa-angle-right mr-2"></i>Auriculoterapia</a>
+                                <a class="text-white-50 mb-2" href="servicos#ROLF"><i class="fa fa-angle-right mr-2"></i>Liberação Miofascial (Conceito ROLF)</a><a class="text-white-50 mb-2" href="servicos#auric"><i class="fa fa-angle-right mr-2"></i>Auriculoterapia</a>
                             </div>
                         </div>
                         <!--<div class="col-sm-12 mb-5">
