--- a/tree.html
+++ b/tree.html
@@ -128,14 +128,14 @@ https://github.com/ardacarofficial/links-website is open source project.
                 <li>Massagem para dor (Clínica)</li>
                 <li>Massagem Relaxante</li>
                 <li>Massagem Sueca(Clássica)</li>
-                <li>Liberação miofascial(Deep Tissue)</li>
+                <li>Liberação Miofascial(Deep Tissue)</li>
                 <li>Massagem para Dor de cabeça(Cefaleia - Enxaqueca)</li>
                 <li>Massagem para Disfunção Temporomandibular</li>
                 <li>Massagem Facial (Lifting Facial)</li>
-                <li>Drenagem linfática</li>
-                <li>Massagem com pedras quentes</li>
+                <li>Drenagem Linfática</li>
+                <li>Massagem com Pedras Quentes</li>
                 <li>Ventosaterapia</li>
-                <li>Liberação miofascial(Conceito ROLF)</li>
+                <li>Liberação Miofascial(Conceito ROLF)</li>
             </ul>
         </div>
         <!-- Menu Small Item 
