--- a/shell.html
+++ b/shell.html
@@ -50,20 +50,20 @@
             </div>
             <div class="col-lg-6 text-right">
                 <div class="d-inline-flex align-items-center">
-                   <!-- <a class="text-primary px-2" href="">
+                    <a class="text-primary px-2" href="https://www.facebook.com/drwillsouto">
                         <i class="fab fa-facebook-f"></i>
                     </a>
                     
-                    <a class="text-primary pl-2" href="">
+                  <!--  <a class="text-primary pl-2" href="">
                         <i class="fab fa-youtube"></i>
                     </a>
                     -->
                      <a class="text-primary px-2" href="https://www.instagram.com/drwillsouto/" target="_blank">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a class="text-primary px-2" href="https://twitter.com/drwillsouto" target="_blank">
+                   <!-- <a class="text-primary px-2" href="https://twitter.com/drwillsouto" target="_blank">
                         <i class="fab fa-twitter"></i>
-                    </a> 
+                    </a>  -->
                     <a class="text-primary px-2" href="https://www.linkedin.com/in/drwillsouto/" target="_blank">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
