--- a/tree.html
+++ b/tree.html
@@ -10,7 +10,7 @@ https://github.com/ardacarofficial/links-website is open source project.
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Will - Massoterapia em sala e domiciliar, Fisioterapia - Tratamento de dor, promoção de saúde e bem-estar </title>
+    <title>Dr. Will - Fisioterapia e Massoterapia em clínica ou domiciliar - Tratamento de dor, promoção de saúde e bem-estar </title>
     <meta name="description" content="List all your links on one website.">
     <meta property="og:title" content="links-website" />
     <meta property="og:description" content="List all your links on one website." />
@@ -30,7 +30,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       </div>
       <div class="header_text flex_column_center treemtxt">
         <h1 class="header_h_item">Dr. Will</h1>
-        <h2 class="header_h_item">Massoterapia em sala e domiciliar - Fisioterapia</h2>
+        <h2 class="header_h_item">Fisioterapia e Massoterapia em clínica ou domiciliar</h2>
       </div>
     <!-- Logo, Title and Description Codes End -->  
 
@@ -124,7 +124,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       <section id="main_section_container_1" class="flex_column_center">
         <!-- Menu Text Item -->
         <div class="main_text_item" style="display: block;">
-          <p>Estamos preparados para lhe atender de acordo com suas preferências e necessidades, confira alguns de nosso serviços:<br></p>
+          <p>Estamos preparados para lhe atender de acordo com suas preferências e necessidades, atendimentos domicilares ou em clínica, confira alguns de nosso serviços:<br></p>
             <ul><li>Fisioterapia</li>
                 <li>Tratamento da dor</li>
                 <li>Massagem para dor (Clínica)</li>
