--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </script>
     <link rel="icon" href="img/favicon.png">
     <meta charset="utf-8">
-    <title>Dr. Will - Massoterapia em sala e domiciliar, Fisioterapia - Tratamento de dor, promoção de saúde e bem-estar </title>
+    <title>Dr. Will - Fisioterapia e Massoterapia em clínica ou domiciliar - Tratamento de dor, promoção de saúde e bem-estar </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     
    <meta content="Stress? Dor? Cansaço? Tensão? Ansiedade? Venha aproveitar os benefícios das nossas terapias, estamos preparados para lhe atender de acordo com suas preferências e necessidades..." name="description">
@@ -170,9 +170,9 @@
                     <a href="servicos"><img class="position-absolute w-100 h-100" src="img/domiciliar.jpg" style="object-fit: contain;"></a>
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
-                            <h3 class="display-3 text-white mb-3">Atendimento domiciliar ou em sala</h3>
-                            <p class="mx-md-5" style="padding: 2rem !important;">Oferecemos atendimento personalizado, seja em nossa sala ou no conforto do seu lar. <br>Já pensou em receber uma massagem relaxante sem sair de casa?<br> Aproveite essa experiência única onde você se sentir mais à vontade.</p>
+                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Fisioterapia e Massoterapia</h6>
+                            <h3 class="display-3 text-white mb-3" style="font-size: 4.3rem;">Atendimento domiciliar ou em clínica</h3>
+                            <p class="mx-md-5" style="padding: 2rem !important;">Oferecemos atendimento personalizado, seja em clínica ou no conforto do seu lar. <br>Já pensou em fazer fisioterapia ou receber uma massagem sem sair de casa?<br> Aproveite essa experiência única onde você se sentir mais à vontade.</p>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos" >Saiba mais</a>
                         </div>
