--- a/fisio.html
+++ b/fisio.html
@@ -171,7 +171,7 @@
 
 Com o passar dos anos, nosso corpo precisa de cuidados especiais. A fisioterapia geriátrica é essencial para manter a mobilidade, reduzir dores e promover a independência em cada fase da vida. <br>
 
-Benefícios da Fisioterapia Geriátrica: <br> Melhora na força muscular e equilíbrio ✅ Prevenção de quedas e fraturas ✅ Alívio de dores articulares e musculares ✅ Promoção de autonomia nas atividades do dia a dia ✅ Aumento da qualidade de vida, bem-estar e independência
+Benefícios da Fisioterapia Geriátrica: <br> Melhora na força muscular e equilíbrio; prevenção de quedas e fraturas; alívio de dores articulares e musculares; promoção de autonomia nas atividades do dia a dia; Aumento da qualidade de vida, bem-estar e independência.
 
 Agende uma consulta para você ou seu querido garantir uma vida mais ativa e feliz na terceira idade! 💚</p>
                        
