--- a/fisio.html
+++ b/fisio.html
@@ -239,6 +239,22 @@
             </div>
         </div>
     </div>
+     <div class="container-fluid py-5">
+        <div class="container">
+            <div class="row align-items-center fisioblock">
+                <div class="col-lg-3 pb-5 pb-lg-0">
+                     <h2 class="mb-4 text-center">Fisioterapia Desportiva</h2>
+                    <img class="img-fluid w-100" title="desportiva" src="img/desportiva.png" alt="desportiva">
+                </div>
+                <div class="col-lg-9">
+                    <span class="pl-4 border-left border-primary d-block"><p>Para quem pratica esportes, a fisioterapia desportiva é essencial para evitar lesões e melhorar o desempenho. Além disso, o recovery — processo de recuperação muscular — é uma parte fundamental para atletas de todos os níveis, garantindo uma recuperação mais rápida e eficaz após treinos e competições.<br>
+                        <strong>Benefícios da Fisioterapia Desportiva:</strong> <br> Acelera a regeneração muscular; Reduz o risco de lesões e fadiga; Melhora a mobilidade, flexibilidade, força e potência; Aumenta a performance esportiva e bem-estar<br>
+                        
+                        Cuide do seu corpo como um atleta! Agende sua sessão de fisioterapia desportiva e eleve sua performance.  </p> Para agendamento ou dúvidas:<br> <a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Fisioterapia%20Desportiva." class="btn btn-primary mt-2" target="_blank">Mais informações</a> </span>
+                </div>
+            </div>
+        </div>
+    </div>
      
                    <!-- <div class="container py-5">
                     <h1>Formações e eventos</h1>
